# k1921vk01t-pac

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  K1921VK01T.svd  README.md  device.x  k1921vk01t.yaml
src/: lib.rs  nt_adc.rs  nt_bootflash.rs  nt_can.rs  nt_cap0.rs  nt_cmp.rs  nt_common_reg.rs  nt_dma.rs  nt_ethernet.rs  nt_gpioa.rs  nt_i2c0.rs  nt_pwm0.rs  nt_qep0.rs  nt_rtc.rs  nt_spi0.rs  nt_timer0.rs  nt_uart0.rs  nt_usbdevice.rs  nt_usbhost.rs  nt_usbotg.rs  nt_userflash.rs  nt_wdt.rs
src/nt_adc/: actss.rs  dccmp.rs  dcctl.rs  dcrtc.rs  dcval.rs  emux.rs  im.rs  isc.rs  ostat.rs  pp.rs  pssi.rs  ricnt.rs  ris.rs  sac.rs  seq.rs  spc0.rs  spc1.rs  spc2.rs  spc3.rs  spc4.rs  spc5.rs  ustat.rs
src/nt_bootflash/: fcic.rs  fcim.rs  fma.rs  fmc.rs  fmd0.rs  fmd1.rs  fmd2.rs  fmd3.rs  t_nvh.rs  t_nvs.rs  t_pgh.rs  t_pgs.rs
src/nt_can/: can_msg.rs  can_node.rs  clc.rs  fdr.rs  id.rs  list.rs  mcr_reg.rs  mitr.rs  msid.rs  msimask.rs  mspnd.rs  panctr.rs
src/nt_cap0/: cap0.rs  cap1.rs  cap2.rs  cap3.rs  ctrphs.rs  ecclr.rs  ecctl0.rs  ecctl1.rs  eceint.rs  ecflg.rs  ecfrc.rs  peint.rs  tsctr.rs
src/nt_cmp/: ctl0.rs  ctl1.rs  ctl2.rs  inten.rs  mis.rs  power.rs  refctl0.rs  refctl1.rs  refctl2.rs  ris.rs  stat0.rs  stat1.rs  stat2.rs
src/nt_common_reg/: adc_ctrl0.rs  adc_ctrl1.rs  adc_ctrl2.rs  apb_clk.rs  ext_mem_cfg.rs  flash_full_erase.rs  gpioden0.rs  gpioden1.rs  gpioden2.rs  gpioden3.rs  gpiodena.rs  gpiodenb.rs  gpiodenc.rs  gpiodend.rs  gpiodene.rs  gpiodenf.rs  gpiodeng.rs  gpiodenh.rs  gpiodsctl0.rs  gpiodsctl1.rs  gpiodsctl2.rs  gpiodsctl3.rs  (+67 more)
(+262 files in other folders)
